ARM/uirobot/azuredeploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                 "description": "Location for all resources."
             }
        },
        "orchestratorUrl": {
             "type": "string",
             "defaultValue": "",
             "metadata": {
                 "description": "Orchestrator URL."
             }
         }, 
         "machineKey": {
             "type": "string",
             "defaultValue": "",
             "metadata": {
                 "description": "Machine Key."
             }
         }, 
        "orchestratorConnectionString": {
             "type": "string",
             "defaultValue": "",
             "metadata": {
                 "description": "Orchestrator connection string."
             }
         },
        "virtualMachineName": {
             "type": "string",
             "metadata": {
                 "description": "Virtual Machine Name"
             }
         },
        "adminUsername": {
             "type": "string",
             "metadata": {
                 "description": "Admin username"
             }
         },
        "adminPassword": {
             "type": "secureString",
             "metadata": {
                 "description": "Admin password"
             }
         },
         "virtualMachineSize": {
             "type": "string",
             "defaultValue": "Standard_B2s",
             "allowedValues": [
                 "Standard_B2s",
                 "Standard_F2s_v2"
             ]
         },
        "osDiskType": {
             "type": "string",
             "defaultValue": "Standard HDD",
             "allowedValues": [
                 "StandardSSD_LRS",
                 "Standard_LRS"
             ]
         },
        "publicIpAddressName": {
             "type": "string"
         },
        "publicIpAddressSku": {
             "type": "string",
             "defaultValue": "Basic",
             "allowedValues": [
                 "Basic",
                 "Standard"
             ]
         },
        "publicIpAddressType": {
             "type": "string",
             "defaultValue": "Dynamic",
             "allowedValues": [
                 "Dynamic",
                 "Static"
             ]
         },
        "networkInterfaceName": {
             "type": "string"
         },
        "networkSecurityGroupName": {
             "type": "string"
         },	
        "virtualNetworkName": {
             "type": "string"
         },
        "addressPrefix": {
             "type": "string",
             "defaultValue": "10.0.0.0/24"
         },
        "subnetName": {
             "type": "string"
         },
        "subnetPrefix": {
             "type": "string",
             "defaultValue": "10.0.0.0/24"
         }	    
    },
    "variables": {
        "nsgId": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]",
        "vnetId": "[resourceId(resourceGroup().name,'Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('subnetName'))]"
    },
    "resources": [
        {
            "name": "[parameters('networkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-04-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName'))]",
                "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('publicIpAddressName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIpAddresses', parameters('publicIpAddressName'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[variables('nsgId')]"
                }
            },
            "tags": {}
        },
        {
            "name": "[parameters('networkSecurityGroupName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "priority": 300,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80"
                        }
                    },
                    {
                        "name": "RDP",
                        "properties": {
                            "priority": 320,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "priority": 340,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "443"
                        }
                    }
                ]
            },
            "tags": {}
        },
        {
            "name": "[parameters('virtualNetworkName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2018-08-01",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetPrefix')]"
                        }
                    }
                ]
            },
            "tags": {}
        },
        {
            "name": "[parameters('publicIpAddressName')]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "2018-08-01",
            "location": "[parameters('location')]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('publicIpAddressType')]"
            },
            "sku": {
                "name": "[parameters('publicIpAddressSku')]"
            },
            "tags": {}
        },
        {
            "name": "[parameters('virtualMachineName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2018-04-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('networkInterfaceName'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('virtualMachineSize')]"
                },
                "storageProfile": {
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('osDiskType')]"
                        }
                    },
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaceName'))]"
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachineName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "enableAutomaticUpdates": true,
                        "provisionVmAgent": true
                    }
                }
            },
            "tags": {}
        },
        {
            "name": "Microsoft.CustomScriptExtension-20180925144205",
            "apiVersion": "2015-01-01",
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "incremental",
                 "parameters": {
                    "vmName": {
                        "value": "[parameters('virtualMachineName')]"
                    },
                    "location": {
                        "value": "[parameters('location')]"
                    },
                    "fileUris": {
                        "value": "https://iaasv2tempstorageam.blob.core.windows.net/vmextensionstemporary-10030000ac97215e-20180925075536032/install-robots.ps1?sv=2017-04-17&sr=c&sig=3IPBeCTK80q2fdOl%2BYip52CFe4RQOh0Nht09maybl%2Fk%3D&se=2018-09-26T07%3A55%3A36Z&sp=rw"
                    },
                    "arguments": {
                        "value": "-orchestratorUrl  [parameters('orchestratorUrl')] -machineKey [parameters('machineKey')] -orchestratorConnectionString [parameters('orchestratorConnectionString')]"
                    }
                },
                "protectedSettings": {
                   "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File ', parameters('fileUris'), ' ', parameters('arguments'))]"
                }
                
            },
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachineName'))]"
            ]
        }
    ],
    "outputs": {
        "adminUsername": {
            "type": "string",
            "value": "[parameters('adminUsername')]"
        }
    }
}
